avoid subtitles overlapping titlepad-action buttons, remove unnecessary z-index from #sidebarbg

--- a/src/Assets/less/components/sidebar.less
+++ b/src/Assets/less/components/sidebar.less
@@ -10,7 +10,6 @@
   height: 100%;
   background-color: @sidebar-bg-color;
   border-right: 1px solid @sidebar-border-color;
-  z-index: -1;
 
   body.nav-closed & {
     display: none;
