--- a/src/Assets/less/components/title-pad.less
+++ b/src/Assets/less/components/title-pad.less
@@ -3,11 +3,12 @@
 @import (reference) "../__mixins";
 
 .titlepad {
-  position: relative;
+  display: flex;
   margin: 0 0 @computed-height;
 }
 
 .titlepad-title {
+  flex: 1;
   margin: 0;
   font-size: @titlepad-title-font-size;
   font-weight: normal;
@@ -33,9 +34,6 @@
 }
 
 .titlepad-actions {
-  position: absolute;
-  right: 0;
-  top: 0;
   margin: 0;
   padding: 0;
   list-style: none;
